--- a/au-input/package.json
+++ b/au-input/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "au-input",
-  "version": "8.0.2",
+  "name": "au-input-ankit",
+  "version": "9.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
