--- a/au-tab-panel/package.json
+++ b/au-tab-panel/package.json
@@ -11,7 +11,6 @@
     "e2e": "ng e2e"
   },
   "private": false,
-
   "dependencies": {
     "@angular/common": "7.0.0",
     "@angular/compiler": "7.0.0",
@@ -22,9 +21,10 @@
     "@angular/platform-browser-dynamic": "7.0.0",
     "@angular/router": "7.0.0",
     "core-js": "^2.4.1",
+    "node-sass": "^4.13.1",
     "rxjs": "6.3.3",
-    "zone.js": "0.8.26",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "rxjs-compat": "^6.0.0-rc.0",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "^7.0.0",
